Mo Uddin league design

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <script src="assets/bootstrap.self-b38817c3e3a3049abb1fc08dd6ae448b23330f8453226efdb074710209474f75.js" data-turbolinks-track="reload"></script>
 <script src="assets/application.self-12be097b9a2442b0b6cdcb5146d1d63c00abcde3675ff34d1de6126cb13e6714.js" data-turbolinks-track="reload"></script>
     <link href="https://use.fontawesome.com/releases/v5.0.4/css/all.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="assets/custom.css">
+    <link rel="stylesheet" type="text/css" href="./assets/custom.css">
   </head>
 
   <body>
@@ -29,7 +29,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html#">Sparta League</a>
+          <a class="navbar-brand" href="index.html#">
+            <img id="sgthumb" src="./img/sparta.png" alt="SGLogo"> SPARTA LEAGUE
+          </a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -47,9 +49,17 @@
   </div>
 </div>
 
+<div class="container">
+  <div class="jumbotron">
+    <h1>BILL SMITH</h1>
+    <img src="https://fillmurray.com/300/300" alt="">
+    <p>TOP DOG!</p>
+  </div>
+</div>
+
 <div class="row">
-  <div class="col-md-12">
-    <table class="table">
+  <div class="col-md-10 col-md-offset-1">
+    <table class="table table-bordered">
       <thead>
         <tr>
           <th></th>
